fixing blurry background

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0px;
+    background-color:rgb(0, 0, 77)
 }
 
 main, .birth, form, .horoscope, .container, .containerContent {
@@ -29,6 +30,15 @@ main, .birth, form, .horoscope, .container, .containerContent {
 .birth {
     height: 100vh; 
     text-align: center;
+}
+
+.absolute {
+    position: absolute;
+    top: 0px;
+} 
+
+.blur {
+    filter: blur(8px); 
 }
 
 form{
@@ -105,6 +115,9 @@ h1, h3, p{
     100% {opacity:1;}
 }
 
+.horoscope {
+    margin-top: 20px;
+}
 
 .container, .containerContent {
     width: 600px;
